Add some logs and try to encode on base 64 for WIndows